<resources>
    <string name="app_name">DataStorage</string>
    <string name="action_settings">Settings</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="guardar">Acceder</string>
    <string name="registro">Registro</string>
    <string name="nombre">Nombre</string>
    <string name="correo">E-Mail</string>
    <string name="contraseña">Contraseña</string>
    <string name="edad">Edad</string>
    <string name="registrar">Registrar</string>
    <string name="volver">Volver</string>
</resources>
