<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Controladores.MainActivity"
        android:background="@color/colorBackGround">

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="50dp"
            android:ems="10"
            android:id="@+id/email"
            android:gravity="center"
            android:hint="@string/email"
            android:textColor="@color/colorText"
            android:textColorHint="@color/colorTextHint"
            android:textColorLink="@color/colorText"
            android:textColorHighlight="@color/colorText"/>

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            app:layout_constraintTop_toBottomOf="@+id/email"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="8dp"
            android:id="@+id/password"
            android:gravity="center"
            android:hint="@string/password"
            android:textColor="@color/colorText"
            android:textColorHint="@color/colorTextHint"
            android:textColorLink="@color/colorText"
            android:textColorHighlight="@color/colorText"/>
    <Button
            android:text="@string/guardar"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@+id/password"
            android:id="@+id/acceder"
            android:textColor="@color/colorText"
            android:textColorHint="@color/colorPrimary"
            android:background="@drawable/rounder_corner_button"
            android:ems="10"
            android:onClick="login"/>

    <Button
            android:text="@string/registro"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/acceder"
            android:id="@+id/registro"
            android:textColor="@color/colorText"
            android:textColorHint="@color/colorPrimary"
            android:background="@drawable/rounder_corner_button"
            android:ems="10"
            android:onClick="register"/>

</android.support.constraint.ConstraintLayout>